@devambrose : testing template systems

--- a/ushauri/templates/layout.jinja2
+++ b/ushauri/templates/layout.jinja2
@@ -8,7 +8,7 @@
     <meta name="author" content="Pylons Project">
     <link rel="shortcut icon" href="{{request.url_for_static('static/pyramid-16x16.png')}}">
 
-    <title>Cookiecutter Alchemy project for the Pyramid Web Framework</title>
+    <title></title>
 
     <!-- Bootstrap core CSS
     <link href="//oss.maxcdn.com/libs/twitter-bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
@@ -61,13 +61,6 @@
     </div>
 </div>
 
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster
-<script src="//oss.maxcdn.com/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="//oss.maxcdn.com/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
--->
 {% block scripts %}
     {% jsresource request,'coreresources','bootstrap' %}
 {% endblock scripts %}
